syntax = "proto3";

package golem.common;


enum ProjectAction {
  VIEW_TEMPLATE = 0;
  CREATE_TEMPLATE = 1;
  UPDATE_TEMPLATE = 2;
  DELETE_TEMPLATE = 3;
  VIEW_WORKER = 4;
  CREATE_WORKER = 5;
  UPDATE_WORKER = 6;
  DELETE_WORKER = 7;
  VIEW_PROJECT_GRANTS = 8;
  CREATE_PROJECT_GRANTS = 9;
  DELETE_PROJECT_GRANTS = 10;
  VIEW_API_DEFINITION = 11;
  CREATE_API_DEFINITION = 12;
  UPDATE_API_DEFINITION = 13;
  DELETE_API_DEFINITION = 14;
}
