syntax = "proto3";

package golem;

message UUID {
  uint64 high_bits = 1;
  uint64 low_bits = 2;
}
